--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Manrope', sans-serif;
+    background: linear-gradient(#16161d, #1f1f3a, #3b2f4a)
 }
 
 /*          DISPLAY FLEX + JUSTIFY CONTENT CENTER       */
@@ -9,7 +10,10 @@ h1, h2, h3, p {
     justify-content: center;
 }
 
-/*              FONT SIZE & WEIGHT           */
+/*              FONT SIZE & WEIGHT + COLOR          */
+h1, h2, h3, p, label {
+    color: #467973;
+}
 input, select[id=planet], button, label {
     font-size: 20px;
 }  
@@ -56,3 +60,4 @@ margin-top: 50px;
 #planet {
 text-transform: capitalize;
 }
+
